--- a/proyecto.css
+++ b/proyecto.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap');
 
-html{height:  100%;}
+html {
+    height: 100%;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -9,17 +12,17 @@ html{height:  100%;}
 }
 
 body {
-    background-color:white;
+    background-color: white;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
 }
 
 header {
     width: 100%;
-    margin: 0px;
+    margin: 0;
     position: relative;
     height: auto;
+    z-index: 2;
 }
 
 main {
@@ -27,29 +30,42 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 80vh;
+    flex: 1; /* Ocupa el espacio restante */
     text-align: center;
 }
 
-.texto1 {
-    color: #009E3F;
-    margin: 5px;
-    font-weight: bolder;
-    font-size: 7.5vw;
+.contenedor {
+    background-color: #009E3F;
+    border-radius: 10px;
+    margin: 1rem;
+    margin-bottom: 4rem;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    position: relative;
+    z-index: 3;
 }
 
-.texto2 {
-    color: black;
-    margin: 10px;
-    font-weight: 375;
-    font-size: 3.5vw;
+.texto {
+    color: white;
+    font-size: 20px;
+    text-align: left;
+    margin-bottom: 1rem;
 }
 
-.texto3{
+.titulo {
     color: black;
-    margin: 10px;
-    font-weight: 450;
-    font-size: 3vw;
+    font-size: 3.5rem;
+    margin-top: 3%;
+    margin-bottom: 1%;
+    text-decoration: underline;
+}
+
+.subtitulo {
+    color: white;
+    font-size: 25px;
+    text-decoration: underline;
 }
 
 span {
@@ -58,8 +74,8 @@ span {
 
 footer {
     width: 100%;
-    margin-top: auto;
     background-color: #009E3F;
+    z-index: 1;
 }
 
 .navbar ul {
@@ -138,8 +154,7 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem; 
-    background-color: #009E3F;
+    padding: 1rem;
     color: white;
 }
 
