--- a/proyecto.css
+++ b/proyecto.css
@@ -1,9 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap');
 
-html {
-    height: 100%;
-}
-
+html{height:  100%;}
 * {
     margin: 0;
     padding: 0;
@@ -30,7 +27,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex: 1; /* Ocupa el espacio restante */
+    flex: 1;
     text-align: center;
 }
 
@@ -125,7 +122,7 @@ footer {
     transition: 0.5s;
 }
 
-@media (max-width: 640px) {
+@media (max-width: 860px) {
     .navbar ul {
         flex-wrap: wrap;
     }
